--- a/languages/rust.org
+++ b/languages/rust.org
@@ -1,3 +1,5 @@
+- https://github.com/trickster0/OffensiveRust
+- RUST WASM https://www.reddit.com/r/rust/comments/tm10wi/media_i_made_a_website_to_demonstrate_performance/
 - Course: Rust analyzer https://www.youtube.com/watch?v=I3RXottNwk0&list=PLhb66M_x9UmrqXhQuIpWC5VgTdrGxMx3y
 - https://matklad.github.io/2020/09/20/why-not-rust.html
 - https://fasterthanli.me/articles/some-mistakes-rust-doesnt-catch
